# hh_parsing_postgres

./: .gitignore  README.md  db_manager.py  employer.py  job_api.py  main.py  pyproject.toml  queries.sql  vacancy.py
